Фикс текстовок, добавил снекбар

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -22,20 +22,20 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Definition: "
+            android:text="@string/definition"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image" />
 
         <TextView
-            android:id="@+id/definitionTitle2"
+            android:id="@+id/examplesTitle2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Examples: "
+            android:text="@string/examples"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -137,7 +137,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/definitionTitle2"
+            app:layout_constraintTop_toBottomOf="@+id/examplesTitle2"
             tools:text="He [got] a bicycle for his birthday.\nHe [got] a bicycle for his birthday.\nHe [got] a bicycle for his birthday." />
 
         <TextView
@@ -146,7 +146,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Frequency"
+            android:text="@string/frequency"
             android:textColor="#FFFFFF"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/meaning"
@@ -157,10 +157,10 @@
             android:id="@+id/meaning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="sans-serif-medium"
-            android:text="Meaning"
+            android:text="@string/meaning_title"
             android:textColor="#FFFFFF"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -217,5 +217,11 @@
             app:layout_constraintStart_toStartOf="@+id/examples"
             app:layout_constraintTop_toBottomOf="@+id/examples" />
 
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"
+            app:constraint_referenced_ids="definitionTitle,examplesTitle2,divider,divider2,meaning,frequency,recyclerView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
