--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -30,7 +30,7 @@
             android:layout_marginEnd="16dp"
             android:background="@drawable/edit_text_shape"
             android:drawablePadding="8dp"
-            android:hint="search word"
+            android:hint="@string/search_word"
             android:maxLines="1"
             android:inputType="text"
             android:imeOptions="actionDone|flagNoExtractUi"
@@ -89,7 +89,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="sans-serif-light"
-        android:text="No results"
+        android:text="@string/no_results"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:visibility="gone"
